[gd_scene load_steps=13 format=3 uid="uid://cdkxh7cx78vsl"]

[ext_resource type="Script" path="res://Scenes/Stages/Stage1/Boss/boss_rework_1.gd" id="1_dyjnb"]
[ext_resource type="PackedScene" uid="uid://b0tn4emgjhr2k" path="res://Scenes/Stages/Stage1/bullet_1.tscn" id="2_20b3g"]
[ext_resource type="PackedScene" uid="uid://dvxv1clnlk2et" path="res://Scenes/Stages/Stage1/Boss/boss_1_fragment_final.tscn" id="2_c8lnt"]
[ext_resource type="Texture2D" uid="uid://d28i6ne8nb7ov" path="res://Assets/Stages/01/Boss/KingCatSlime.png" id="2_dkq4j"]
[ext_resource type="Texture2D" uid="uid://cgaus8rf8q302" path="res://Assets/Stages/01/Boss/BossWalls.png" id="5_yy82x"]

[sub_resource type="CircleShape2D" id="CircleShape2D_11hxo"]
radius = 66.0681

[sub_resource type="Animation" id="Animation_rsgfx"]
resource_name = "ShakeBoss"
length = 0.2
loop_mode = 1
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(5, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Hitbox:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.15),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(-5, 0), Vector2(5, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y0pjm"]
_data = {
"ShakeBoss": SubResource("Animation_rsgfx")
}

[sub_resource type="Animation" id="Animation_hwmj1"]
resource_name = "BounceBoss"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SpriteHolder/BossSprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(4, -15), Vector2(4, -23)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SpriteHolder/BossSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.21, 0.2), Vector2(0.2, 0.22)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Hitbox/CollisionShape2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(-2.4869e-14, -7), Vector2(0, -15)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Hitbox/CollisionShape2D:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Vector2(0.2, 0.21), Vector2(0.22, 0.2)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y45tn"]
_data = {
"BounceBoss": SubResource("Animation_hwmj1")
}

[sub_resource type="Gradient" id="Gradient_014l1"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_crj53"]
radius = 320.0
height = 840.0

[node name="BossRework1" type="StaticBody2D" groups=["Boss"]]
collision_layer = 33
collision_mask = 33
script = ExtResource("1_dyjnb")
bullet = ExtResource("2_20b3g")
fragment = ExtResource("2_c8lnt")

[node name="SpriteHolder" type="Node2D" parent="."]

[node name="BossSprite" type="Sprite2D" parent="SpriteHolder"]
position = Vector2(4, -15)
scale = Vector2(0.21, 0.2)
texture = ExtResource("2_dkq4j")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("CircleShape2D_11hxo")

[node name="ShakeTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Shaker" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y0pjm")
}

[node name="Bouncer" type="AnimationPlayer" parent="."]
autoplay = "BounceBoss"
libraries = {
"": SubResource("AnimationLibrary_y45tn")
}

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.75
autostart = true

[node name="ShatterParticles" type="CPUParticles2D" parent="."]
z_index = 1
emitting = false
amount = 100
lifetime = 0.3
one_shot = true
explosiveness = 1.0
texture = ExtResource("5_yy82x")
emission_shape = 1
emission_sphere_radius = 60.0
spread = 180.0
gravity = Vector2(0, 0)
initial_velocity_min = 500.0
initial_velocity_max = 550.0
color = Color(1, 1, 1, 0.501961)
color_ramp = SubResource("Gradient_014l1")

[node name="DeleteTimer" type="Timer" parent="."]
one_shot = true

[node name="Hitbox" type="Area2D" parent="." groups=["BossHitbox"]]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
position = Vector2(-2.4869e-14, -7)
rotation = 1.5708
scale = Vector2(0.2, 0.21)
shape = SubResource("CapsuleShape2D_crj53")

[connection signal="timeout" from="ShakeTimer" to="." method="_on_shake_timer_timeout"]
[connection signal="timeout" from="ShootTimer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="DeleteTimer" to="." method="_on_delete_timer_timeout"]
